fixed height overflow

--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -1,7 +1,6 @@
 * {
     margin:0;
     outline:none;
-    border:1px solid;
 }
 body {
     width:100vw;
@@ -128,9 +127,6 @@ input[type="range"]::before {
 }
 
 @media screen and (max-width:1000px) {
-    /* * {
-        border:1px solid;
-    } */
     body {
         width:100vw;
         height:100vh;
